combobox and scrollbar resolve

--- a/src/res/res/css/scrollbar.css
+++ b/src/res/res/css/scrollbar.css
@@ -1,106 +1,98 @@
 .scroll-bar{
--fx-background-color:#267575;
+-fx-pref-width: 15;
 }
-.track-background{
--fx-background-color:#ff2e00;
+.track-background{}
+.increment-button,.decrement-button{
+-fx-background-color:#eb5858;
+-fx-pref-width: 15;
+-fx-pref-height: : 15;
 }
-.increment-button{
--fx-background-color:#35d727;
-}
-.increment-arrow{
--fx-background-color:#b617be;
-}
-.decrement-button{
--fx-background-color:#061616;
-}
-.decrement-arrow{
--fx-background-color:#f999d8;
-}
-#COMBOBOX .track{/*Вся дорожка */
--fx-pref-width:2;
--fx-background-color:#d4e7e7;
-}
+.track{/*Вся дорожка */
+  -fx-padding:0 1 1 0;
+  -fx-background-insets:  1 1 1 0;
+  -fx-background:transparent;
+  -fx-background-color:#e9ebff;
+  -fx-border-width:  0.5 0.5 0.5 0.5  ;
 
-.scroll-bar:horizontal {
-    -fx-background-color: derive(-fx-box-border,30%), linear-gradient(to bottom, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
-    -fx-background-insets: 0, 1 0 1 0;
+  -fx-effect: dropshadow(gaussian ,#605d5d , 1, 0, 0.1, 0.1);
 }
 .scroll-bar:vertical {
-    -fx-background-color: derive(-fx-box-border,30%), linear-gradient(to right, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
-    -fx-background-insets: 0, 0 1 0 1;
+    -fx-background-insets: 0, 0;
 }
 .scroll-bar:focused {
-    -fx-background-color:
-        -fx-focus-color,
-        linear-gradient(to bottom, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%)),
-        -fx-faint-focus-color,
-        linear-gradient(to bottom, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
-    -fx-background-insets: -0.2, 1, -1.4, 2.6;
+        -fx-background-insets: 0, 0;
 }
 .scroll-bar:vertical:focused {
-    -fx-background-color:
-        -fx-focus-color,
-        linear-gradient(to right, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%)),
-        -fx-faint-focus-color,
-        linear-gradient(to right, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
+
 }
-.scroll-bar > .thumb {
-    -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color;
-    /*-fx-background-insets: 1, 2, 3;*/
-    -fx-background-insets: 2, 3, 4;
-    /*-fx-background-radius: 0.416667em, 0.333333em, 0.25em; *//* 5, 4,3 */
-    -fx-background-radius: 3, 2, 1;
-}
-.scroll-bar:vertical > .thumb {
-    -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color-to-right;
+.scroll-bar > .thumb,.scroll-bar:vertical > .thumb {/* двигающаяся полоска */
+    -fx-background-insets: 2 2 2 2 ;
+    /* -fx-border-width:  0.5 0.5 0.5 0.5  ; */
+    -fx-border-width:  0 ;
+    -fx-border-color: rgba(#b6a5a5, 0.83)  ;
+    -fx-background-radius: 0;
+    -fx-background-color:#ffffff;
+    -fx-effect: dropshadow(gaussian ,#605d5d , 2, 0, 0.5, 0.5);
 }
 .scroll-bar > .increment-button,
-.scroll-bar > .decrement-button {
-    -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color;
-    -fx-color: transparent;
-    -fx-padding: 0.25em; /* 3px */
-}
-.scroll-bar:horizontal > .increment-button,
-.scroll-bar:horizontal > .decrement-button {
-    -fx-background-insets: 2 1 2 1, 3 2 3 2, 4 3 4 3;
-}
+.scroll-bar > .decrement-button ,
 .scroll-bar:vertical > .increment-button,
-.scroll-bar:vertical > .decrement-button {
-    -fx-background-insets: 1 2 1 2, 2 3 2 3, 3 4 3 4;
+.scroll-bar:vertical > .decrement-button{
+    -fx-color: #a7cef2;
+    -fx-padding: 0;
 }
+
 .scroll-bar > .increment-button > .increment-arrow,
 .scroll-bar > .decrement-button > .decrement-arrow {
-    -fx-background-color: -fx-mark-highlight-color,derive(-fx-base,-45%);
+
 }
 .scroll-bar > .increment-button:hover > .increment-arrow,
 .scroll-bar > .decrement-button:hover > .decrement-arrow {
-    -fx-background-color: -fx-mark-highlight-color,derive(-fx-base,-50%);
+
 }
 .scroll-bar > .increment-button:pressed > .increment-arrow,
 .scroll-bar > .decrement-button:pressed > .decrement-arrow {
-    -fx-background-color: -fx-mark-highlight-color,derive(-fx-base,-55%);
-}
-.scroll-bar:horizontal > .decrement-button > .decrement-arrow {
-    -fx-padding: 0.333em 0.167em 0.333em 0.167em; /* 4 2 4 2 */
-    -fx-shape: "M5.997,5.072L5.995,6.501l-2.998-4l2.998-4l0.002,1.43l-1.976,2.57L5.997,5.072z";
-    -fx-effect: dropshadow(two-pass-box , -fx-shadow-highlight-color, 1, 0.0 , 0, 1.4);
-    /*-fx-background-insets: 2 0 -2 0, 0;*/
-}
-.scroll-bar:horizontal > .increment-button > .increment-arrow {
-    -fx-padding: 0.333em 0.167em 0.333em 0.167em; /* 4 2 4 2 */
-    -fx-shape: "M2.998-0.07L3-1.499l2.998,4L3,6.501l-0.002-1.43l1.976-2.57L2.998-0.07z";
-    -fx-effect: dropshadow(two-pass-box , -fx-shadow-highlight-color, 1, 0.0 , 0, 1.4);
-    /*-fx-background-insets: 2 0 -2 0, 0;*/
+
 }
 .scroll-bar:vertical > .decrement-button > .decrement-arrow {
-    -fx-padding: 0.167em 0.333em 0.167em 0.333em; /* 2 4 2 4 */
+-fx-color: transparent;
+    -fx-padding: 0;
     -fx-shape: "M1.929,4L0.5,3.998L4.5,1l4,2.998L7.07,4L4.5,2.024L1.929,4z";
     -fx-effect: dropshadow(two-pass-box , -fx-shadow-highlight-color, 1, 0.0 , 0, 1.4);
-    /*-fx-background-insets: 2 0 -2 0, 0;*/
+    -fx-pref-width: 0;
+    -fx-pref-height: : 0;
+
 }
 .scroll-bar:vertical > .increment-button > .increment-arrow {
-    -fx-padding: 0.167em 0.333em 0.167em 0.333em; /* 2 4 2 4 */
+  -fx-color: transparent;
+    -fx-padding: 0;
     -fx-shape: "M7.071,1L8.5,1.002L4.5,4l-4-2.998L1.93,1L4.5,2.976L7.071,1z";
     -fx-effect: dropshadow(two-pass-box , -fx-shadow-highlight-color, 1, 0.0 , 0, 1.4);
-    /*-fx-background-insets: 2 0 -2 0, 0;*/
+    -fx-pref-width: 0;
+    -fx-pref-height: : 0;
+
+
+}
+#TABLE *.scroll-bar:horizontal *.increment-button,
+#TABLE *.scroll-bar:horizontal *.decrement-button ,
+  .scroll-bar > .thumb,.scroll-bar:horizontal > .thumb
+{
+    -fx-background-color: transparent;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-border-width:  0  ;
+    -fx-border-color: transparent  ;
+    -fx-pref-width: 0;
+    -fx-pref-height: : 0;
+}
+#TABLE *.scroll-bar:horizontal *.increment-arrow,
+#TABLE *.scroll-bar:horizontal *.decrement-arrow {
+    -fx-background-color: transparent;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-shape: null;
+    -fx-pref-width: 0;
+    -fx-pref-height: : 0;
 }
